<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PasswordFragment"
    >

    <data>

        <variable
            name="model"
            type="eu.mcomputing.mobv.mobvzadanie.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:text="@string/change_password_title"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_password"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title"
            android:layout_marginTop="48dp"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_current_password"
            android:hint="@string/enter_current_password"
            android:inputType="textPassword"
            android:minHeight="@dimen/clickable_min_height"
            android:text="@={model.oldPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/label_password_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            android:layout_marginTop="48dp"/>

        <EditText
            android:id="@+id/edit_text_password_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_new_password"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:minHeight="@dimen/clickable_min_height"
            android:text="@={model.newPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password_new"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/label_password_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zopakujte_heslo"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password_new"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edit_text_password_repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/repeat_new_password"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:minHeight="@dimen/clickable_min_height"
            android:text="@={model.repeat_password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password_repeat"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="@{()->model.changePassword()}"
            android:text="@string/change_password"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>