<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/orange_800">

    <ImageView
        android:id="@+id/map"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/map_icon"
        android:padding="13dp"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@drawable/baseline_map_24"
        android:translationY="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/feed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/Feed_icon"
        android:padding="13dp"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@drawable/baseline_feed_24"
        android:translationY="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile"
        app:layout_constraintStart_toEndOf="@id/map"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/profile_icon"
        android:padding="13dp"
        android:scaleX="1.4"
        android:scaleY="1.4"
        android:src="@drawable/baseline_account_box_24"
        android:translationY="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/feed"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>